--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "basiclightbox": "^5.0.2",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "gh-pages": "^2.1.1",
     "pnotify": "^4.0.0",
     "prop-types": "^15.7.2",
