--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "basiclightbox": "^5.0.2",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "shortid": "^2.2.15",
     "gh-pages": "^2.1.1",
     "pnotify": "^4.0.0",
     "prop-types": "^15.7.2",
@@ -18,8 +19,7 @@
     "react-dom": "^16.12.0",
     "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "shortid": "^2.2.15"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
